# wkTTS

./: 3RDPARTY  CMakeLists.txt  README.md  build_Win32.bat  resource.rc.in
flite/: CMakeLists.txt
hacklib/: CMakeLists.txt
release/: wkTTS.ini
src/: Debug.h  GameChat.cpp  GameChat.h  Hooks.cpp  Hooks.h  LobbyChat.cpp  LobbyChat.h  Speaker.cpp  Speaker.h  dllmain.cpp
